# jccpp

./: CMakeLists.txt  CMakePresets.json
include/jccpp/: AutoBitConverter.cpp  AutoBitConverter.h  Bit.h  BitConverter.cpp  BitConverter.h  CancellationTokenSource.cpp  CancellationTokenSource.h  EndianConverter.cpp  IDisposable.h  Json.h  MutexHandleWrapper.h  Parse.h  TaskCompletionSignal.cpp  TaskCompletionSignal.h  TimeInterpolator.h  ToString.h  Wrapper.h
include/jccpp/communicate/: ModbusCrc16.cpp
include/jccpp/container/: DataCache.h  HysteresisBlockingQueue.h  List.h  SafeQueue.h
include/jccpp/math/: ModbusCrc16.h
include/jccpp/stream/: BlockingCircleBufferMemoryStream.h  CircleBufferMemoryStream.h  FileStream.cpp  FileStream.h  JoinedStream.cpp  JoinedStream.h  MemoryStream.cpp  MemoryStream.h  StreamOperator.cpp  StreamOperator.h
